[project]
name = "icu-lmarena"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.34",
    # "google-generativeai>=0.7",
    "google-genai>=1.45.0",
    "openai>=1.30",
    "plotly>=6.3.1",
    "sqlalchemy>=2.0",
    "streamlit>=1.36",
]
